--- a/css/style.css
+++ b/css/style.css
@@ -21,13 +21,14 @@ body {
 }
 
 /* Text Align */
-:is(h2) {
+:is(h1) {
     margin-top: .3rem;
     text-align: center;
 }
 
 input{
     min-width: 25dvw;
+    min-height: 3rem;
 
 }
 
@@ -44,4 +45,10 @@ input{
     width: 4rem;
     border-radius: 24px 15px 20px 10px;
     margin: auto;
+}
+
+/* list style */
+
+ul, li {
+    list-style: none;
 }
